crates/css_ast/tests/snapshots/postcss_snapshots__postcss_function.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        {
          "components": [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "A": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 1
                  }
                }
              }
            }
          ],
          "comma": null
        }
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 2,
        "len": 1
      },
      "declarations": [
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 8,
              "len": 16
            },
            "colon": {
              "kind": "Colon",
              "offset": 24,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 25,
                  "len": 1
                },
                {
                  "kind": "Url",
                  "offset": 26,
                  "len": 83
                }
              ]
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 109,
            "len": 1
          }
        ],
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 115,
              "len": 16
            },
            "colon": {
              "kind": "Colon",
              "offset": 131,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 132,
                  "len": 1
                },
                {
                  "type": "FunctionBlock",
                  "name": {
                    "kind": "Function",
                    "offset": 133,
                    "len": 4
                  },
                  "values": [
                    {
                      "kind": "String",
                      "offset": 137,
                      "len": 17
                    }
                  ],
                  "close_paren": {
                    "kind": "RightParen",
                    "offset": 154,
                    "len": 1
                  }
                }
              ]
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 155,
            "len": 1
          }
        ],
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 161,
              "len": 16
            },
            "colon": {
              "kind": "Colon",
              "offset": 177,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 178,
                  "len": 1
                },
                {
                  "type": "FunctionBlock",
                  "name": {
                    "kind": "Function",
                    "offset": 179,
                    "len": 4
                  },
                  "values": [
                    {
                      "kind": "Whitespace",
                      "offset": 183,
                      "len": 1
                    },
                    {
                      "kind": "String",
                      "offset": 184,
                      "len": 17
                    }
                  ],
                  "close_paren": {
                    "kind": "RightParen",
                    "offset": 202,
                    "len": 1
                  }
                }
              ]
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 203,
            "len": 1
          }
        ]
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 205,
        "len": 1
      }
    }
  ]
}
