crates/css_ast/tests/snapshots/postcss_snapshots__postcss_inside.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": []
}
