crates/css_ast/tests/snapshots/postcss_snapshots__postcss_media.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        {
          "components": [
            {
              "type": "pseudo-class",
              "value": {
                "active": [
                  {
                    "kind": "Colon",
                    "offset": 0,
                    "len": 1
                  },
                  {
                    "kind": "Ident",
                    "offset": 1,
                    "len": 4
                  }
                ]
              }
            }
          ],
          "comma": null
        }
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 6,
        "len": 1
      },
      "declarations": [
        {
          "type": "property",
          "name": {
            "kind": "Ident",
            "offset": 10,
            "len": 11
          },
          "colon": {
            "kind": "Colon",
            "offset": 21,
            "len": 1
          },
          "value": {
            "values": [
              {
                "kind": "Whitespace",
                "offset": 22,
                "len": 1
              },
              {
                "type": "SimpleBlock",
                "start": 23,
                "open": {
                  "kind": "LeftCurly",
                  "len": 1
                },
                "values": {
                  "values": [
                    {
                      "kind": "Whitespace",
                      "offset": 24,
                      "len": 1
                    },
                    {
                      "kind": "Whitespace",
                      "offset": 25,
                      "len": 4
                    },
                    {
                      "kind": "Ident",
                      "offset": 29,
                      "len": 5
                    },
                    {
                      "kind": "Colon",
                      "offset": 34,
                      "len": 1
                    },
                    {
                      "kind": "Whitespace",
                      "offset": 35,
                      "len": 1
                    },
                    {
                      "kind": "Number",
                      "offset": 36,
                      "len": 1
                    }
                  ]
                },
                "close": null
              }
            ]
          },
          "important": null,
          "semicolon": {
            "kind": "Semicolon",
            "offset": 37,
            "len": 1
          }
        },
        {
          "type": "property",
          "name": {
            "kind": "Ident",
            "offset": 43,
            "len": 6
          },
          "colon": {
            "kind": "Colon",
            "offset": 49,
            "len": 1
          },
          "value": {
            "LengthPercentage": {
              "type": "zero",
              "value": {
                "kind": "Number",
                "offset": 51,
                "len": 1
              }
            }
          },
          "important": null,
          "semicolon": {
            "kind": "Semicolon",
            "offset": 52,
            "len": 1
          }
        }
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 56,
        "len": 1
      }
    },
    {
      "type": "QualifiedRule",
      "prelude": {
        "values": [
          {
            "kind": "Semicolon",
            "offset": 57,
            "len": 1
          },
          {
            "kind": "Whitespace",
            "offset": 58,
            "len": 1
          },
          {
            "kind": "Whitespace",
            "offset": 59,
            "len": 2
          },
          {
            "kind": "Ident",
            "offset": 61,
            "len": 12
          },
          {
            "kind": "Colon",
            "offset": 73,
            "len": 1
          }
        ]
      },
      "block": {
        "type": "Block",
        "start": 74,
        "open_curly": {
          "kind": "LeftCurly",
          "offset": 75,
          "len": 1
        },
        "declarations": [
          {
            "type": "Declaration",
            "name": {
              "kind": "Ident",
              "offset": 81,
              "len": 5
            },
            "colon": {
              "kind": "Colon",
              "offset": 86,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 87,
                  "len": 1
                },
                {
                  "kind": "Dimension",
                  "offset": 88,
                  "len": 4,
                  "unit": "px"
                }
              ]
            },
            "important": null,
            "semicolon": {
              "kind": "Semicolon",
              "offset": 92,
              "len": 1
            }
          },
          {
            "type": "Declaration",
            "name": {
              "kind": "Ident",
              "offset": 98,
              "len": 6
            },
            "colon": {
              "kind": "Colon",
              "offset": 104,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 105,
                  "len": 1
                },
                {
                  "kind": "Dimension",
                  "offset": 106,
                  "len": 4,
                  "unit": "px"
                }
              ]
            },
            "important": null,
            "semicolon": {
              "kind": "Semicolon",
              "offset": 110,
              "len": 1
            }
          }
        ],
        "rules": [],
        "close_curly": {
          "kind": "RightCurly",
          "offset": 114,
          "len": 1
        }
      }
    }
  ]
}
