crates/css_ast/tests/snapshots/postcss_snapshots__postcss_no_selector.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 0,
        "len": 1
      },
      "declarations": [],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 1,
        "len": 1
      }
    }
  ]
}
